# test14

./: .clang-format  .clang-tidy  .cppcheck-suppressions  .cproject  .gitignore  .mxproject  .project  CLAUDE.md  STM32H562VGTX_FLASH.ld  STM32H562VGTX_RAM.ld  gugu-machine-guidance-v2.ioc
.github/scripts/: create-issue-from-task.sh  setup-labels.sh
.github/workflows/: ci.yml  task-to-issue.yml
Core/Inc/: main.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h
Core/Src/: hookfunction.c  main.c  stm32h5xx_hal_msp.c  stm32h5xx_hal_timebase_tim.c  stm32h5xx_it.c  syscalls.c  sysmem.c  system_stm32h5xx.c
app/ble/: ble_app.c  ble_app.h  ble_cmd.c  ble_cmd.h  ble_port.c  ble_port.h
app/core/: deferred_work.c  deferred_work.h  event_bus.c  event_bus.h
app/gps/: base_auto_fix.c  base_auto_fix.h  gps_app.c  gps_app.h  gps_port.c  gps_port.h  gps_role.c  gps_role.h
app/gsm/: gsm_app.c  gsm_port.c  lte_init.c  lte_init.h  ntrip_app.c
app/lora/: lora_app.c  lora_app.h  lora_port.c  lora_port.h
app/params/: flash_params.c  flash_params.h
app/rs485/: rs485_app.c  rs485_app.h  rs485_cmd.c  rs485_cmd.h  rs485_port.c  rs485_port.h
config/: FreeRTOSConfig.h  board_config.c  board_config.h  board_type.h
docs/: board_config.md  hw_spec.md  use_case.md
docs/app/: gps_app.md  protocol_cmd_app.md
docs/driver/: gps_drv.md
docs/todo/: gps_todo.md
docs/util/: util_eventbus.md
lib/ble/: ble.c  ble.h  ble_parser.c  ble_parser.h  ble_task.c  ble_types.h
lib/gps/: gps.c  gps.h  gps_event.h  gps_nmea.c  gps_nmea.h  gps_parser.c  gps_parser.h  gps_proto_def.h  gps_types.h  gps_unicore.c  gps_unicore.h  rtcm.c  rtcm.h
lib/gsm/: gsm.c  gsm.h  tcp_socket.c  tcp_socket.h
lib/led/: led.c  led.h
lib/log/: log.h
lib/lora/: lora.c  lora.h
lib/parser/: parser.c  parser.h  parser_test.c
lib/rs485/: rs485.c  rs485.h  softuart.c  softuart.h
lib/utils/inc/: dev_assert.h  ringbuffer.h
lib/utils/src/: dev_assert.c  ringbuffer.c
tasks/: gps_gga_raw_refactor.md  gps_nmea_dead_code_cleanup.md  gps_parser_optimization.md
test/: CMakeLists.txt  README.md  run_tests.sh
test/fixture/nmea/: nmea_fixture.h
test/mock/: FreeRTOS.h  cmsis_compiler.h  gps_stubs.c  gps_stubs_nmea.c  mock_common.c  queue.h  semphr.h  stm32f4xx.h  stm32f4xx_hal.h  stm32f4xx_hal_gpio.h  task.h  timers.h
test/module/: test_gps_nmea.c
test/unit/: test_parser.c  test_ringbuffer.c
